--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "dependencies": {
     "next": "^10.2.3",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "redux-form": "7.3.0",
+    "react-redux": "5.0.7",
+    "redux-promise": "0.5.3",
+    "react-router-dom": "4.2.2"
   }
 }
